# proportional-priority-voting

./: .gitignore  CHANGES  LICENSE  README.md  SConstruct  openapi.json  pyproject.toml  setup.py
_design/: normal_lib.js  normal_map.js  votes.json.template  votes_map.js
design/: normal_lib.js  normal_map.js  votes.json.template  votes_map.js
proportional_priority_voting/: design.py  priority.py  priority_voting_couchdb.py  priority_voting_datastore.py  priority_voting_quartrio.py
