[project]
version = "0.1.0"
name = "proportional-priority-voting"
description = "A simple community priority polling system"

authors = [
    { name = "Steve Work", email = "steve@work.renlabs.com"}
]

classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "aiohttp"
]

packages = ["proportional_priority_voting"]
readme = "README.md"
src_root = "."
url = "https://github.com/swork/proportional-priority-voting"
license = "BSD-2-Clause"

[project.optional-dependencies]
cli = ["click"]
doc = ["sphinx"]

[project.scripts]
setup2toml = "enscons.setup2toml:main"

[build-system]
build-backend = "enscons.api"
requires = ["pytoml>=0.1", "enscons>=0.28"]
